--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@lostisworld/svelte-classlist-preprocess",
-    "version": "1.0.0",
+    "version": "0.0.1",
     "description": "This is a svelte preprocessor that allows you to use an array inside the class:list pattern in your svelte components",
     "keywords": [
       "svelte",
@@ -19,7 +19,10 @@
       "url": "git+https://github.com/LoStis-World/svelte-classlist-preprocess.git"
     },
     "devDependencies": {
-      "svelte": "^4.0.0"
+      "@sveltejs/kit": "^2.0.0",
+      "@sveltejs/vite-plugin-svelte": "^3.0.0",
+      "svelte": "^4.0.0",
+      "vite": "^5.0.0"
     },
     "scripts": {
       "test": "echo \"Error: no test specified\" && exit 1"
