--- a/package.json
+++ b/package.json
@@ -1,32 +1,33 @@
 {
-    "name": "@lostisworld/svelte-classlist-preprocess",
-    "version": "0.0.1",
-    "description": "This is a svelte preprocessor that allows you to use an array inside the class:list pattern in your svelte components",
-    "keywords": [
-      "svelte",
-      "classlist",
-      "preprocess",
-      "svelte-preprocess",
-      "svelte-preprocess-classlist"
-    ],
-    "main": "index.js",
-    "homepage": "https://github.com/LoStis-World/svelte-classlist-preprocess#readme",
-    "bugs": {
-      "url": "https://github.com/LoStis-World/svelte-classlist-preprocess/issues"
-    },
-    "repository": {
-      "type": "git",
-      "url": "git+https://github.com/LoStis-World/svelte-classlist-preprocess.git"
-    },
-    "devDependencies": {
-      "@sveltejs/kit": "^2.0.0",
-      "@sveltejs/vite-plugin-svelte": "^3.0.0",
-      "svelte": "^4.0.0",
-      "vite": "^5.0.0"
-    },
-    "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "LoSti's World",
-    "license": "MIT"
-  }
+	"name": "@lostisworld/svelte-classlist-preprocess",
+	"version": "0.0.1",
+	"description": "This is a svelte preprocessor that allows you to use an array inside the class:list pattern in your svelte components",
+	"keywords": [
+		"svelte",
+		"classlist",
+		"preprocess",
+		"svelte-preprocess",
+		"svelte-preprocess-classlist"
+	],
+	"main": "index.js",
+	"homepage": "https://github.com/LoStis-World/svelte-classlist-preprocess#readme",
+	"bugs": {
+		"url": "https://github.com/LoStis-World/svelte-classlist-preprocess/issues"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/LoStis-World/svelte-classlist-preprocess.git"
+	},
+	"devDependencies": {
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"svelte": "^4.0.0",
+		"vite": "^5.0.0"
+	},
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"author": "LoSti's World",
+	"license": "MIT",
+	"type": "module"
+}
