--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@lostisworld/svelte-classlist-preprocess",
 	"version": "0.0.1",
-	"description": "This is a svelte preprocessor that allows you to use an array inside the class:list pattern in your svelte components",
+	"description": "This Svelte preprocessor enables the usage of arrays within the class:list attribute pattern in your Svelte components. It simplifies the management of class names by allowing you to pass an array of classes directly into your component's markup, enhancing code readability and maintainability.",
 	"keywords": [
 		"svelte",
 		"classlist",
